--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start:prod": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +14,11 @@
   "description": "",
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
+    "dotenv": "^16.4.5",
     "joi": "^17.13.3",
-    "nanoid": "^3.3.7"
+    "nanoid": "^3.3.7",
+    "node-pg-migrate": "^7.7.1",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
